Added charts to dashboard

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -4,3 +4,25 @@
 .chart-title {
   text-align: center;
 }
+
+.app-count {
+  height: 200px;
+  text-align: center;
+  font-size: 125px;
+  color: blue;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 100px;
+  padding-bottom: 15px;
+}
+
+.user-count {
+  height: 200px;
+  text-align: center;
+  font-size: 100px;
+  color: gray;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 100px;
+  padding-bottom: 15px;
+}
