--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,2 +1,10 @@
-<h1>Home#about</h1>
-<p>Find me in app/views/home/about.html.erb</p>
+<h1>About the App Catalog</h1>
+<p>Monitoring your enterprise applications is important. And, it should be easy.
+Too many times we have seen government organizations, large corporations, and small businesses not know nor fully understand their enterprise technical situation.</p>
+<ul>
+	<li>You should know the health of all your systems</li>
+	<li>You should know all your systems</li>
+	<li>You should know the users of all your systems</li>
+	<li>All areas of IT should be transparent across your organization</li>
+	<li></li>
+</ul>
